# AlgoTrading

./: AAPL  Overview.pptx  Port.sh  PortfolioManager  PortfolioManager.cpp  Pricer  README.md  auto.sh  bondpricer  checkPos  checkPos.cpp  hello  hello.s  hello2.s  index.html  manual.sh  page1.html  page2.html  run.sh  scrap.cpp  style.css  test.cpp  visualisator.py
Database/: Call.csv  CashFlow.csv  Positions.csv  Put.csv  Universe.csv  option_data.csv
Instruments/: Bonds.h  IV  IVcalculator.cpp  Options.h  Stocks.h  bondPricer.cpp  optionPricer  optionPricer.cpp  stockAnalysis  stockAnalysis.cpp  test  test.cpp
Models/: BlackScholesMerton.h  Heston.h
MultiThreading/: mpi_multi.cpp  mpi_program  mpi_single.cpp  multi_thread  single_thread  sum.cpp  sum_multithread.cpp
StatTests/: IsNormal.ml  dune  help.txt  test
StatTests/_build/: .db  .digest-db  log
StatTests/_build/default/: IsNormal.ml  Test.ml
StatTests/_build/default/.Test.eobjs/: dune__exe.ml-gen  dune__exe__IsNormal.impl.d  dune__exe__Test.impl.all-deps  dune__exe__Test.impl.d
StatTests/_build/default/.Test.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__IsNormal.cmi  dune__exe__IsNormal.cmo  dune__exe__IsNormal.cmt  dune__exe__Test.cmi  dune__exe__Test.cmti
StatTests/_build/default/.Test.eobjs/native/: dune__exe.cmx  dune__exe__IsNormal.cmx  dune__exe__Test.cmx
StatTests/_build/default/.dune/: configurator  configurator.v2
StatTests/_build/default/.merlin-conf/: exe-Test
StatTests/_build/default/.test.eobjs/native/: dune__exe__Isnormal.cmx  dune__exe__Test.cmx
(+40 files in other folders)
